# "make VERBOSE=1"
cmake_minimum_required (VERSION 2.6) 
project (TOMCAT_JNI)

FIND_PACKAGE(JNI REQUIRED)
include (${CMAKE_ROOT}/Modules/ExternalProject.cmake)

ExternalProject_Add( apr
    PREFIX deps
    DOWNLOAD_DIR ${PROJECT_SOURCE_DIR}/deps
    URL http://mirrors.ibiblio.org/apache/apr/apr-1.4.5.tar.gz
    CONFIGURE_COMMAND "./configure"
    BUILD_COMMAND ""
    INSTALL_COMMAND ""
    BUILD_IN_SOURCE 1
)

enable_language(ASM-ATT)
set(can_use_assembler TRUE)
ExternalProject_Add( openssl
    PREFIX deps
    DOWNLOAD_DIR ${PROJECT_SOURCE_DIR}/deps
    URL http://openssl.org/source/openssl-1.0.1-beta2.tar.gz
    CONFIGURE_COMMAND "./config"
    BUILD_COMMAND ""
    INSTALL_COMMAND ""
    BUILD_IN_SOURCE 1
    )

include_directories (${TOMCAT_JNI_SOURCE_DIR}/native/include 
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/apr/include
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/apr/include/arch/unix
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/openssl
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/openssl/include 
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/openssl/crypto
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/openssl/crypto/modes
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/openssl/crypto/asn1
  ${TOMCAT_JNI_SOURCE_DIR}/deps/src/openssl/crypto/evp
  ${JAVA_INCLUDE_PATH}
) 

set (CMAKE_C_FLAGS "-pthread   -DHAVE_CONFIG_H -DLINUX=2 -D_REENTRANT -D_GNU_SOURCE -DHAVE_OPENSSL -fPIC -DOPENSSL_PIC -DOPENSSL_THREADS -DDSO_DLFCN -DHAVE_DLFCN_H -Wa,--noexecstack -m64 -DL_ENDIAN -DTERMIO -O3 -Wall -DOPENSSL_IA32_SSE2 -DOPENSSL_BN_ASM_MONT -DOPENSSL_BN_ASM_MONT5 -DOPENSSL_BN_ASM_GF2m -DSHA1_ASM -DSHA256_ASM -DSHA512_ASM -DMD5_ASM -DAES_ASM -DVPAES_ASM -DBSAES_ASM -DWHIRLPOOL_ASM -DGHASH_ASM")

# Cmake doesn't support conveneinece libraries ( static ? )
add_library (ssl STATIC
deps/src/openssl/crypto/sha/sha512-x86_64.s
deps/src/openssl/crypto/sha/sha256-x86_64.s
deps/src/openssl/crypto/sha/sha1-x86_64.s
deps/src/openssl/crypto/bn/x86_64-mont5.s
deps/src/openssl/crypto/bn/x86_64-gf2m.s
deps/src/openssl/crypto/bn/modexp512-x86_64.s
deps/src/openssl/crypto/camellia/cmll-x86_64.s
deps/src/openssl/crypto/md5/md5-x86_64.s
deps/src/openssl/crypto/whrlpool/wp-x86_64.s
deps/src/openssl/crypto/rc4/rc4-x86_64.s
deps/src/openssl/crypto/rc4/rc4-md5-x86_64.s
deps/src/openssl/crypto/aes/aesni-sha1-x86_64.s
deps/src/openssl/crypto/aes/aesni-x86_64.s
deps/src/openssl/crypto/aes/aes-x86_64.s
deps/src/openssl/crypto/aes/bsaes-x86_64.s
deps/src/openssl/crypto/bn/x86_64-mont.s
deps/src/openssl/crypto/aes/vpaes-x86_64.s
deps/src/openssl/crypto/modes/ghash-x86_64.s
deps/src/openssl/crypto/x86_64cpuid.s

deps/src/openssl/crypto/cversion.c
deps/src/openssl/crypto/ec/ec2_oct.c
deps/src/openssl/crypto/ec/ecp_smpl.c
deps/src/openssl/crypto/ec/ec_check.c
deps/src/openssl/crypto/ec/ecp_nist.c
deps/src/openssl/crypto/ec/ec_err.c
deps/src/openssl/crypto/ec/ecp_mont.c
deps/src/openssl/crypto/ec/ec_key.c
deps/src/openssl/crypto/ec/ec_asn1.c
deps/src/openssl/crypto/ec/ecp_nistp256.c
deps/src/openssl/crypto/ec/ecp_oct.c
deps/src/openssl/crypto/ec/ec_cvt.c
deps/src/openssl/crypto/ec/ecp_nistputil.c
deps/src/openssl/crypto/ec/ecp_nistp521.c
deps/src/openssl/crypto/ec/ec_print.c
deps/src/openssl/crypto/ec/eck_prn.c
deps/src/openssl/crypto/ec/ec_curve.c
deps/src/openssl/crypto/ec/ec_oct.c
deps/src/openssl/crypto/ec/ecp_nistp224.c
deps/src/openssl/crypto/ec/ec_mult.c
deps/src/openssl/crypto/ec/ec_pmeth.c
deps/src/openssl/crypto/ec/ec2_smpl.c
deps/src/openssl/crypto/ec/ec2_mult.c
deps/src/openssl/crypto/ec/ec_ameth.c
deps/src/openssl/crypto/ec/ec_lib.c
deps/src/openssl/crypto/bio/bio_lib.c
deps/src/openssl/crypto/bio/bss_sock.c
deps/src/openssl/crypto/bio/bss_log.c
deps/src/openssl/crypto/bio/bio_cb.c
deps/src/openssl/crypto/bio/bss_conn.c
deps/src/openssl/crypto/bio/bss_fd.c
deps/src/openssl/crypto/bio/bio_err.c
deps/src/openssl/crypto/bio/bss_file.c
deps/src/openssl/crypto/bio/bss_bio.c
deps/src/openssl/crypto/bio/b_print.c
deps/src/openssl/crypto/bio/b_sock.c
deps/src/openssl/crypto/bio/b_dump.c
deps/src/openssl/crypto/bio/bss_acpt.c
deps/src/openssl/crypto/bio/bss_dgram.c
deps/src/openssl/crypto/bio/bf_buff.c
deps/src/openssl/crypto/bio/bss_mem.c
deps/src/openssl/crypto/bio/bss_null.c
deps/src/openssl/crypto/bio/bf_nbio.c
deps/src/openssl/crypto/bio/bf_null.c
deps/src/openssl/crypto/ebcdic.c
deps/src/openssl/crypto/sha/sha_one.c
deps/src/openssl/crypto/sha/sha1dgst.c
deps/src/openssl/crypto/sha/sha512.c
deps/src/openssl/crypto/sha/sha_dgst.c
deps/src/openssl/crypto/sha/sha256.c
deps/src/openssl/crypto/sha/sha1_one.c
deps/src/openssl/crypto/bn/bn_err.c
deps/src/openssl/crypto/bn/bn_print.c
deps/src/openssl/crypto/bn/bn_exp.c
deps/src/openssl/crypto/bn/bn_blind.c
deps/src/openssl/crypto/bn/bn_mpi.c
deps/src/openssl/crypto/bn/bn_const.c
deps/src/openssl/crypto/bn/bn_mod.c
deps/src/openssl/crypto/bn/bn_x931p.c
deps/src/openssl/crypto/bn/bn_exp2.c
deps/src/openssl/crypto/bn/bn_prime.c
deps/src/openssl/crypto/bn/bn_mul.c
deps/src/openssl/crypto/bn/bn_add.c
deps/src/openssl/crypto/bn/bn_kron.c
deps/src/openssl/crypto/bn/bn_sqrt.c
deps/src/openssl/crypto/bn/bn_depr.c
deps/src/openssl/crypto/bn/bn_div.c
deps/src/openssl/crypto/bn/bn_nist.c
deps/src/openssl/crypto/bn/bn_gf2m.c
deps/src/openssl/crypto/bn/bn_gcd.c
deps/src/openssl/crypto/bn/bn_recp.c
deps/src/openssl/crypto/bn/bn_lib.c
deps/src/openssl/crypto/bn/bn_rand.c
deps/src/openssl/crypto/bn/bn_sqr.c
deps/src/openssl/crypto/bn/bn_shift.c
deps/src/openssl/crypto/bn/bn_mont.c
deps/src/openssl/crypto/bn/asm/x86_64-gcc.c
deps/src/openssl/crypto/bn/bn_ctx.c
deps/src/openssl/crypto/bn/bn_word.c
deps/src/openssl/crypto/objects/obj_xref.c
deps/src/openssl/crypto/objects/o_names.c
deps/src/openssl/crypto/objects/obj_dat.c
deps/src/openssl/crypto/objects/obj_lib.c
deps/src/openssl/crypto/objects/obj_err.c
deps/src/openssl/crypto/ui/ui_openssl.c
deps/src/openssl/crypto/ui/ui_util.c
deps/src/openssl/crypto/ui/ui_err.c
deps/src/openssl/crypto/ui/ui_compat.c
deps/src/openssl/crypto/ui/ui_lib.c
deps/src/openssl/crypto/stack/stack.c
deps/src/openssl/crypto/x509/x509_ext.c
deps/src/openssl/crypto/x509/x509_err.c
deps/src/openssl/crypto/x509/x509rset.c
deps/src/openssl/crypto/x509/x509_cmp.c
deps/src/openssl/crypto/x509/x509_req.c
deps/src/openssl/crypto/x509/x509spki.c
deps/src/openssl/crypto/x509/by_file.c
deps/src/openssl/crypto/x509/x509_lu.c
deps/src/openssl/crypto/x509/x509_set.c
deps/src/openssl/crypto/x509/x509_vfy.c
deps/src/openssl/crypto/x509/x509type.c
deps/src/openssl/crypto/x509/x509name.c
deps/src/openssl/crypto/x509/x509_vpm.c
deps/src/openssl/crypto/x509/x509_obj.c
deps/src/openssl/crypto/x509/x509_def.c
deps/src/openssl/crypto/x509/x509_att.c
deps/src/openssl/crypto/x509/x509cset.c
deps/src/openssl/crypto/x509/x_all.c
deps/src/openssl/crypto/x509/x509_v3.c
deps/src/openssl/crypto/x509/x509_trs.c
deps/src/openssl/crypto/x509/x509_txt.c
deps/src/openssl/crypto/x509/x509_r2x.c
deps/src/openssl/crypto/x509/x509_d2.c
deps/src/openssl/crypto/x509/by_dir.c
deps/src/openssl/crypto/pem/pem_seal.c
deps/src/openssl/crypto/pem/pem_sign.c
deps/src/openssl/crypto/pem/pem_all.c
deps/src/openssl/crypto/pem/pem_err.c
deps/src/openssl/crypto/pem/pem_pk8.c
deps/src/openssl/crypto/pem/pem_info.c
deps/src/openssl/crypto/pem/pem_x509.c
deps/src/openssl/crypto/pem/pem_pkey.c
deps/src/openssl/crypto/pem/pem_xaux.c
deps/src/openssl/crypto/pem/pem_oth.c
deps/src/openssl/crypto/pem/pem_lib.c
deps/src/openssl/crypto/pem/pvkfmt.c
deps/src/openssl/crypto/cast/c_ecb.c
deps/src/openssl/crypto/cast/c_ofb64.c
deps/src/openssl/crypto/cast/c_enc.c
deps/src/openssl/crypto/cast/c_skey.c
deps/src/openssl/crypto/cast/c_cfb64.c
deps/src/openssl/crypto/buffer/buf_err.c
deps/src/openssl/crypto/buffer/buffer.c
deps/src/openssl/crypto/buffer/buf_str.c
deps/src/openssl/crypto/cmac/cm_ameth.c
deps/src/openssl/crypto/cmac/cmac.c
deps/src/openssl/crypto/cmac/cm_pmeth.c
deps/src/openssl/crypto/rc2/rc2ofb64.c
deps/src/openssl/crypto/rc2/rc2_skey.c
deps/src/openssl/crypto/rc2/rc2cfb64.c
deps/src/openssl/crypto/rc2/rc2_cbc.c
deps/src/openssl/crypto/rc2/rc2_ecb.c
deps/src/openssl/crypto/lhash/lhash.c
deps/src/openssl/crypto/lhash/lh_stats.c
deps/src/openssl/crypto/rand/rand_unix.c
deps/src/openssl/crypto/rand/rand_os2.c
deps/src/openssl/crypto/rand/md_rand.c
deps/src/openssl/crypto/rand/rand_egd.c
deps/src/openssl/crypto/rand/rand_lib.c
deps/src/openssl/crypto/rand/rand_nw.c
deps/src/openssl/crypto/rand/rand_win.c
deps/src/openssl/crypto/rand/randfile.c
deps/src/openssl/crypto/rand/rand_err.c
deps/src/openssl/crypto/uid.c
deps/src/openssl/crypto/err/err.c
deps/src/openssl/crypto/err/err_all.c
deps/src/openssl/crypto/err/err_prn.c
deps/src/openssl/crypto/bf/bf_ofb64.c
deps/src/openssl/crypto/bf/bf_skey.c
deps/src/openssl/crypto/bf/bf_cfb64.c
deps/src/openssl/crypto/bf/bf_ecb.c
deps/src/openssl/crypto/bf/bf_enc.c
deps/src/openssl/crypto/o_dir.c
deps/src/openssl/crypto/asn1/tasn_new.c
deps/src/openssl/crypto/asn1/asn_pack.c
deps/src/openssl/crypto/asn1/tasn_prn.c
deps/src/openssl/crypto/asn1/asn_moid.c
deps/src/openssl/crypto/asn1/x_sig.c
deps/src/openssl/crypto/asn1/p8_pkey.c
deps/src/openssl/crypto/asn1/a_sign.c
deps/src/openssl/crypto/asn1/x_pubkey.c
deps/src/openssl/crypto/asn1/i2d_pr.c
deps/src/openssl/crypto/asn1/a_bitstr.c
deps/src/openssl/crypto/asn1/a_object.c
deps/src/openssl/crypto/asn1/tasn_utl.c
deps/src/openssl/crypto/asn1/nsseq.c
deps/src/openssl/crypto/asn1/asn1_gen.c
deps/src/openssl/crypto/asn1/x_long.c
deps/src/openssl/crypto/asn1/x_attrib.c
deps/src/openssl/crypto/asn1/a_time.c
deps/src/openssl/crypto/asn1/p5_pbev2.c
deps/src/openssl/crypto/asn1/t_x509.c
deps/src/openssl/crypto/asn1/x_pkey.c
deps/src/openssl/crypto/asn1/tasn_dec.c
deps/src/openssl/crypto/asn1/asn1_par.c
deps/src/openssl/crypto/asn1/tasn_fre.c
deps/src/openssl/crypto/asn1/x_crl.c
deps/src/openssl/crypto/asn1/a_digest.c
deps/src/openssl/crypto/asn1/t_req.c
deps/src/openssl/crypto/asn1/f_int.c
deps/src/openssl/crypto/asn1/d2i_pu.c
deps/src/openssl/crypto/asn1/d2i_pr.c
deps/src/openssl/crypto/asn1/a_type.c
deps/src/openssl/crypto/asn1/f_enum.c
deps/src/openssl/crypto/asn1/x_name.c
deps/src/openssl/crypto/asn1/asn1_err.c
deps/src/openssl/crypto/asn1/x_bignum.c
deps/src/openssl/crypto/asn1/i2d_pu.c
deps/src/openssl/crypto/asn1/x_exten.c
deps/src/openssl/crypto/asn1/a_utctm.c
deps/src/openssl/crypto/asn1/a_verify.c
deps/src/openssl/crypto/asn1/a_bool.c
deps/src/openssl/crypto/asn1/tasn_typ.c
deps/src/openssl/crypto/asn1/x_val.c
deps/src/openssl/crypto/asn1/tasn_enc.c
deps/src/openssl/crypto/asn1/t_spki.c
deps/src/openssl/crypto/asn1/a_mbstr.c
deps/src/openssl/crypto/asn1/a_gentm.c
deps/src/openssl/crypto/asn1/x_spki.c
deps/src/openssl/crypto/asn1/a_strex.c
deps/src/openssl/crypto/asn1/a_enum.c
deps/src/openssl/crypto/asn1/a_octet.c
deps/src/openssl/crypto/asn1/p5_pbe.c
deps/src/openssl/crypto/asn1/a_utf8.c
deps/src/openssl/crypto/asn1/a_d2i_fp.c
deps/src/openssl/crypto/asn1/t_bitst.c
deps/src/openssl/crypto/asn1/x_algor.c
deps/src/openssl/crypto/asn1/ameth_lib.c
deps/src/openssl/crypto/asn1/bio_asn1.c
deps/src/openssl/crypto/asn1/asn1_lib.c
deps/src/openssl/crypto/asn1/t_x509a.c
deps/src/openssl/crypto/asn1/x_info.c
deps/src/openssl/crypto/asn1/a_dup.c
deps/src/openssl/crypto/asn1/a_i2d_fp.c
deps/src/openssl/crypto/asn1/t_pkey.c
deps/src/openssl/crypto/asn1/x_nx509.c
deps/src/openssl/crypto/asn1/x_req.c
deps/src/openssl/crypto/asn1/a_print.c
deps/src/openssl/crypto/asn1/t_crl.c
deps/src/openssl/crypto/asn1/n_pkey.c
deps/src/openssl/crypto/asn1/a_set.c
deps/src/openssl/crypto/asn1/f_string.c
deps/src/openssl/crypto/asn1/asn_mime.c
deps/src/openssl/crypto/asn1/a_strnid.c
deps/src/openssl/crypto/asn1/a_bytes.c
deps/src/openssl/crypto/asn1/x_x509.c
deps/src/openssl/crypto/asn1/bio_ndef.c
deps/src/openssl/crypto/asn1/a_int.c
deps/src/openssl/crypto/asn1/x_x509a.c
deps/src/openssl/crypto/asn1/evp_asn1.c
deps/src/openssl/crypto/comp/comp_lib.c
deps/src/openssl/crypto/comp/comp_err.c
deps/src/openssl/crypto/comp/c_rle.c
deps/src/openssl/crypto/comp/c_zlib.c
deps/src/openssl/crypto/dso/dso_win32.c
deps/src/openssl/crypto/dso/dso_openssl.c
deps/src/openssl/crypto/dso/dso_lib.c
deps/src/openssl/crypto/dso/dso_beos.c
deps/src/openssl/crypto/dso/dso_err.c
deps/src/openssl/crypto/dso/dso_dlfcn.c
deps/src/openssl/crypto/dso/dso_vms.c
deps/src/openssl/crypto/dso/dso_dl.c
deps/src/openssl/crypto/dso/dso_null.c
deps/src/openssl/crypto/o_time.c
deps/src/openssl/crypto/seed/seed_ecb.c
deps/src/openssl/crypto/seed/seed_cfb.c
deps/src/openssl/crypto/seed/seed.c
deps/src/openssl/crypto/seed/seed_cbc.c
deps/src/openssl/crypto/seed/seed_ofb.c
deps/src/openssl/crypto/ts/ts_verify_ctx.c
deps/src/openssl/crypto/ts/ts_rsp_utils.c
deps/src/openssl/crypto/ts/ts_rsp_verify.c
deps/src/openssl/crypto/ts/ts_asn1.c
deps/src/openssl/crypto/ts/ts_rsp_print.c
deps/src/openssl/crypto/ts/ts_req_print.c
deps/src/openssl/crypto/ts/ts_lib.c
deps/src/openssl/crypto/ts/ts_conf.c
deps/src/openssl/crypto/ts/ts_req_utils.c
deps/src/openssl/crypto/ts/ts_rsp_sign.c
deps/src/openssl/crypto/ts/ts_err.c
deps/src/openssl/crypto/evp/e_aes_cbc_hmac_sha1.c
deps/src/openssl/crypto/evp/e_old.c
deps/src/openssl/crypto/evp/evp_err.c
deps/src/openssl/crypto/evp/bio_enc.c
deps/src/openssl/crypto/evp/p_open.c
deps/src/openssl/crypto/evp/e_bf.c
deps/src/openssl/crypto/evp/e_rc2.c
deps/src/openssl/crypto/evp/bio_md.c
deps/src/openssl/crypto/evp/e_rc4.c
deps/src/openssl/crypto/evp/p5_crpt.c
deps/src/openssl/crypto/evp/p5_crpt2.c
deps/src/openssl/crypto/evp/e_xcbc_d.c
deps/src/openssl/crypto/evp/e_camellia.c
deps/src/openssl/crypto/evp/m_md5.c
deps/src/openssl/crypto/evp/e_rc4_hmac_md5.c
deps/src/openssl/crypto/evp/m_dss.c
deps/src/openssl/crypto/evp/evp_enc.c
deps/src/openssl/crypto/evp/evp_pkey.c
deps/src/openssl/crypto/evp/e_aes.c
deps/src/openssl/crypto/evp/p_verify.c
deps/src/openssl/crypto/evp/p_dec.c
deps/src/openssl/crypto/evp/e_idea.c
deps/src/openssl/crypto/evp/evp_acnf.c
deps/src/openssl/crypto/evp/m_ripemd.c
deps/src/openssl/crypto/evp/m_sigver.c
deps/src/openssl/crypto/evp/m_ecdsa.c
deps/src/openssl/crypto/evp/evp_key.c
deps/src/openssl/crypto/evp/c_alld.c
deps/src/openssl/crypto/evp/digest.c
deps/src/openssl/crypto/evp/m_sha1.c
deps/src/openssl/crypto/evp/names.c
deps/src/openssl/crypto/evp/bio_ok.c
deps/src/openssl/crypto/evp/p_lib.c
deps/src/openssl/crypto/evp/evp_lib.c
deps/src/openssl/crypto/evp/pmeth_fn.c
deps/src/openssl/crypto/evp/m_md2.c
deps/src/openssl/crypto/evp/p_seal.c
deps/src/openssl/crypto/evp/evp_pbe.c
deps/src/openssl/crypto/evp/e_des3.c
deps/src/openssl/crypto/evp/pmeth_gn.c
deps/src/openssl/crypto/evp/e_cast.c
deps/src/openssl/crypto/evp/m_dss1.c
deps/src/openssl/crypto/evp/m_md4.c
deps/src/openssl/crypto/evp/m_wp.c
deps/src/openssl/crypto/evp/e_des.c
deps/src/openssl/crypto/evp/p_sign.c
deps/src/openssl/crypto/evp/pmeth_lib.c
deps/src/openssl/crypto/evp/m_mdc2.c
deps/src/openssl/crypto/evp/p_enc.c
deps/src/openssl/crypto/evp/e_rc5.c
deps/src/openssl/crypto/evp/evp_fips.c
deps/src/openssl/crypto/evp/c_allc.c
deps/src/openssl/crypto/evp/bio_b64.c
deps/src/openssl/crypto/evp/c_all.c
deps/src/openssl/crypto/evp/m_null.c
deps/src/openssl/crypto/evp/encode.c
deps/src/openssl/crypto/evp/m_sha.c
deps/src/openssl/crypto/evp/e_null.c
deps/src/openssl/crypto/evp/e_seed.c
deps/src/openssl/crypto/cryptlib.c
deps/src/openssl/crypto/ocsp/ocsp_vfy.c
deps/src/openssl/crypto/ocsp/ocsp_asn.c
deps/src/openssl/crypto/ocsp/ocsp_ext.c
deps/src/openssl/crypto/ocsp/ocsp_cl.c
deps/src/openssl/crypto/ocsp/ocsp_srv.c
deps/src/openssl/crypto/ocsp/ocsp_lib.c
deps/src/openssl/crypto/ocsp/ocsp_ht.c
deps/src/openssl/crypto/ocsp/ocsp_prn.c
deps/src/openssl/crypto/ocsp/ocsp_err.c
deps/src/openssl/crypto/camellia/cmll_ofb.c
deps/src/openssl/crypto/camellia/cmll_cfb.c
deps/src/openssl/crypto/camellia/cmll_misc.c
deps/src/openssl/crypto/camellia/cmll_ctr.c
deps/src/openssl/crypto/camellia/cmll_utl.c
deps/src/openssl/crypto/camellia/cmll_ecb.c
deps/src/openssl/crypto/conf/conf_mod.c
deps/src/openssl/crypto/conf/conf_sap.c
deps/src/openssl/crypto/conf/conf_def.c
deps/src/openssl/crypto/conf/conf_lib.c
deps/src/openssl/crypto/conf/conf_err.c
deps/src/openssl/crypto/conf/conf_mall.c
deps/src/openssl/crypto/conf/conf_api.c
deps/src/openssl/crypto/cpt_err.c
deps/src/openssl/crypto/md5/md5_one.c
deps/src/openssl/crypto/md5/md5_dgst.c
deps/src/openssl/crypto/o_init.c
deps/src/openssl/crypto/ex_data.c
deps/src/openssl/crypto/dsa/dsa_vrf.c
deps/src/openssl/crypto/dsa/dsa_err.c
deps/src/openssl/crypto/dsa/dsa_gen.c
deps/src/openssl/crypto/dsa/dsa_ameth.c
deps/src/openssl/crypto/dsa/dsa_key.c
deps/src/openssl/crypto/dsa/dsa_lib.c
deps/src/openssl/crypto/dsa/dsa_asn1.c
deps/src/openssl/crypto/dsa/dsa_ossl.c
deps/src/openssl/crypto/dsa/dsa_prn.c
deps/src/openssl/crypto/dsa/dsa_depr.c
deps/src/openssl/crypto/dsa/dsa_pmeth.c
deps/src/openssl/crypto/dsa/dsa_sign.c
deps/src/openssl/crypto/md4/md4_one.c
deps/src/openssl/crypto/md4/md4_dgst.c
deps/src/openssl/crypto/dh/dh_prn.c
deps/src/openssl/crypto/dh/dh_lib.c
deps/src/openssl/crypto/dh/dh_pmeth.c
deps/src/openssl/crypto/dh/dh_gen.c
deps/src/openssl/crypto/dh/dh_check.c
deps/src/openssl/crypto/dh/dh_err.c
deps/src/openssl/crypto/dh/dh_key.c
deps/src/openssl/crypto/dh/dh_asn1.c
deps/src/openssl/crypto/dh/dh_depr.c
deps/src/openssl/crypto/dh/dh_ameth.c
deps/src/openssl/crypto/txt_db/txt_db.c
deps/src/openssl/crypto/whrlpool/wp_dgst.c
deps/src/openssl/crypto/pkcs12/p12_decr.c
deps/src/openssl/crypto/pkcs12/p12_p8d.c
deps/src/openssl/crypto/pkcs12/pk12err.c
deps/src/openssl/crypto/pkcs12/p12_npas.c
deps/src/openssl/crypto/pkcs12/p12_asn.c
deps/src/openssl/crypto/pkcs12/p12_p8e.c
deps/src/openssl/crypto/pkcs12/p12_add.c
deps/src/openssl/crypto/pkcs12/p12_init.c
deps/src/openssl/crypto/pkcs12/p12_attr.c
deps/src/openssl/crypto/pkcs12/p12_mutl.c
deps/src/openssl/crypto/pkcs12/p12_crt.c
deps/src/openssl/crypto/pkcs12/p12_utl.c
deps/src/openssl/crypto/pkcs12/p12_key.c
deps/src/openssl/crypto/pkcs12/p12_kiss.c
deps/src/openssl/crypto/pkcs12/p12_crpt.c
deps/src/openssl/crypto/rc4/rc4_utl.c
deps/src/openssl/crypto/cms/cms_dd.c
deps/src/openssl/crypto/cms/cms_ess.c
deps/src/openssl/crypto/cms/cms_pwri.c
deps/src/openssl/crypto/cms/cms_sd.c
deps/src/openssl/crypto/cms/cms_io.c
deps/src/openssl/crypto/cms/cms_smime.c
deps/src/openssl/crypto/cms/cms_cd.c
deps/src/openssl/crypto/cms/cms_att.c
deps/src/openssl/crypto/cms/cms_lib.c
deps/src/openssl/crypto/cms/cms_asn1.c
deps/src/openssl/crypto/cms/cms_err.c
deps/src/openssl/crypto/cms/cms_env.c
deps/src/openssl/crypto/cms/cms_enc.c
deps/src/openssl/crypto/aes/aes_wrap.c
deps/src/openssl/crypto/aes/aes_ofb.c
deps/src/openssl/crypto/aes/aes_misc.c
deps/src/openssl/crypto/aes/aes_ctr.c
deps/src/openssl/crypto/aes/aes_cfb.c
deps/src/openssl/crypto/aes/aes_ecb.c
deps/src/openssl/crypto/aes/aes_ige.c
deps/src/openssl/crypto/ecdsa/ecs_ossl.c
deps/src/openssl/crypto/ecdsa/ecs_err.c
deps/src/openssl/crypto/ecdsa/ecs_asn1.c
deps/src/openssl/crypto/ecdsa/ecs_vrf.c
deps/src/openssl/crypto/ecdsa/ecs_lib.c
deps/src/openssl/crypto/ecdsa/ecs_sign.c
deps/src/openssl/crypto/rsa/rsa_prn.c
deps/src/openssl/crypto/rsa/rsa_chk.c
deps/src/openssl/crypto/rsa/rsa_lib.c
deps/src/openssl/crypto/rsa/rsa_asn1.c
deps/src/openssl/crypto/rsa/rsa_pss.c
deps/src/openssl/crypto/rsa/rsa_x931.c
deps/src/openssl/crypto/rsa/rsa_none.c
deps/src/openssl/crypto/rsa/rsa_null.c
deps/src/openssl/crypto/rsa/rsa_ameth.c
deps/src/openssl/crypto/rsa/rsa_oaep.c
deps/src/openssl/crypto/rsa/rsa_pk1.c
deps/src/openssl/crypto/rsa/rsa_saos.c
deps/src/openssl/crypto/rsa/rsa_depr.c
deps/src/openssl/crypto/rsa/rsa_err.c
deps/src/openssl/crypto/rsa/rsa_ssl.c
deps/src/openssl/crypto/rsa/rsa_eay.c
deps/src/openssl/crypto/rsa/rsa_sign.c
deps/src/openssl/crypto/rsa/rsa_pmeth.c
deps/src/openssl/crypto/rsa/rsa_gen.c
deps/src/openssl/crypto/rsa/rsa_crpt.c
deps/src/openssl/crypto/mdc2/mdc2_one.c
deps/src/openssl/crypto/mdc2/mdc2dgst.c
deps/src/openssl/crypto/idea/i_skey.c
deps/src/openssl/crypto/idea/i_ofb64.c
deps/src/openssl/crypto/idea/i_ecb.c
deps/src/openssl/crypto/idea/i_cbc.c
deps/src/openssl/crypto/idea/i_cfb64.c
deps/src/openssl/crypto/modes/cbc128.c
deps/src/openssl/crypto/modes/cfb128.c
deps/src/openssl/crypto/modes/ccm128.c
deps/src/openssl/crypto/modes/xts128.c
deps/src/openssl/crypto/modes/ctr128.c
deps/src/openssl/crypto/modes/gcm128.c
deps/src/openssl/crypto/modes/ofb128.c
deps/src/openssl/crypto/modes/cts128.c
deps/src/openssl/crypto/ecdh/ech_err.c
deps/src/openssl/crypto/ecdh/ech_ossl.c
deps/src/openssl/crypto/ecdh/ech_key.c
deps/src/openssl/crypto/ecdh/ech_lib.c
deps/src/openssl/crypto/srp/srp_vfy.c
deps/src/openssl/crypto/srp/srp_lib.c
deps/src/openssl/crypto/engine/tb_digest.c
deps/src/openssl/crypto/engine/tb_asnmth.c
deps/src/openssl/crypto/engine/tb_dh.c
deps/src/openssl/crypto/engine/tb_dsa.c
deps/src/openssl/crypto/engine/tb_cipher.c
deps/src/openssl/crypto/engine/eng_dyn.c
deps/src/openssl/crypto/engine/eng_fat.c
deps/src/openssl/crypto/engine/eng_ctrl.c
deps/src/openssl/crypto/engine/eng_cnf.c
deps/src/openssl/crypto/engine/eng_rdrand.c
deps/src/openssl/crypto/engine/tb_ecdsa.c
deps/src/openssl/crypto/engine/tb_rsa.c
deps/src/openssl/crypto/engine/eng_cryptodev.c
deps/src/openssl/crypto/engine/tb_ecdh.c
deps/src/openssl/crypto/engine/eng_pkey.c
deps/src/openssl/crypto/engine/tb_pkmeth.c
deps/src/openssl/crypto/engine/eng_table.c
deps/src/openssl/crypto/engine/eng_rsax.c
deps/src/openssl/crypto/engine/tb_rand.c
deps/src/openssl/crypto/engine/eng_err.c
deps/src/openssl/crypto/engine/eng_list.c
deps/src/openssl/crypto/engine/eng_lib.c
deps/src/openssl/crypto/engine/eng_openssl.c
deps/src/openssl/crypto/engine/eng_all.c
deps/src/openssl/crypto/engine/eng_init.c
deps/src/openssl/crypto/engine/tb_store.c
deps/src/openssl/crypto/o_str.c
deps/src/openssl/crypto/krb5/krb5_asn.c
deps/src/openssl/crypto/fips_ers.c
deps/src/openssl/crypto/pqueue/pqueue.c
deps/src/openssl/crypto/o_fips.c
deps/src/openssl/crypto/pkcs7/pk7_mime.c
deps/src/openssl/crypto/pkcs7/pk7_lib.c
deps/src/openssl/crypto/pkcs7/pk7_attr.c
deps/src/openssl/crypto/pkcs7/pk7_smime.c
deps/src/openssl/crypto/pkcs7/pk7_asn1.c
deps/src/openssl/crypto/pkcs7/pkcs7err.c
deps/src/openssl/crypto/pkcs7/bio_pk7.c
deps/src/openssl/crypto/pkcs7/pk7_doit.c
deps/src/openssl/crypto/mem_dbg.c
deps/src/openssl/crypto/mem.c
deps/src/openssl/crypto/hmac/hm_pmeth.c
deps/src/openssl/crypto/hmac/hm_ameth.c
deps/src/openssl/crypto/hmac/hmac.c
deps/src/openssl/crypto/des/ofb_enc.c
deps/src/openssl/crypto/des/fcrypt_b.c
deps/src/openssl/crypto/des/qud_cksm.c
deps/src/openssl/crypto/des/cbc_cksm.c
deps/src/openssl/crypto/des/str2key.c
deps/src/openssl/crypto/des/rand_key.c
deps/src/openssl/crypto/des/des_enc.c
deps/src/openssl/crypto/des/cfb_enc.c
deps/src/openssl/crypto/des/ofb64ede.c
deps/src/openssl/crypto/des/cfb64enc.c
deps/src/openssl/crypto/des/ofb64enc.c
deps/src/openssl/crypto/des/enc_read.c
deps/src/openssl/crypto/des/fcrypt.c
deps/src/openssl/crypto/des/xcbc_enc.c
deps/src/openssl/crypto/des/cfb64ede.c
deps/src/openssl/crypto/des/des_old2.c
deps/src/openssl/crypto/des/pcbc_enc.c
deps/src/openssl/crypto/des/set_key.c
deps/src/openssl/crypto/des/ede_cbcm_enc.c
deps/src/openssl/crypto/des/ecb3_enc.c
deps/src/openssl/crypto/des/read2pwd.c
deps/src/openssl/crypto/des/rpc_enc.c
deps/src/openssl/crypto/des/ecb_enc.c
deps/src/openssl/crypto/des/des_old.c
deps/src/openssl/crypto/des/enc_writ.c
deps/src/openssl/crypto/des/cbc_enc.c
deps/src/openssl/crypto/x509v3/v3_pcons.c
deps/src/openssl/crypto/x509v3/v3_crld.c
deps/src/openssl/crypto/x509v3/v3_ncons.c
deps/src/openssl/crypto/x509v3/pcy_cache.c
deps/src/openssl/crypto/x509v3/v3_info.c
deps/src/openssl/crypto/x509v3/v3_genn.c
deps/src/openssl/crypto/x509v3/v3_bcons.c
deps/src/openssl/crypto/x509v3/v3_skey.c
deps/src/openssl/crypto/x509v3/v3_pku.c
deps/src/openssl/crypto/x509v3/v3_extku.c
deps/src/openssl/crypto/x509v3/pcy_data.c
deps/src/openssl/crypto/x509v3/v3_purp.c
deps/src/openssl/crypto/x509v3/v3_lib.c
deps/src/openssl/crypto/x509v3/v3_pmaps.c
deps/src/openssl/crypto/x509v3/v3_pcia.c
deps/src/openssl/crypto/x509v3/v3_sxnet.c
deps/src/openssl/crypto/x509v3/v3_enum.c
deps/src/openssl/crypto/x509v3/v3_alt.c
deps/src/openssl/crypto/x509v3/v3_akey.c
deps/src/openssl/crypto/x509v3/v3_ia5.c
deps/src/openssl/crypto/x509v3/pcy_tree.c
deps/src/openssl/crypto/x509v3/v3_int.c
deps/src/openssl/crypto/x509v3/v3_utl.c
deps/src/openssl/crypto/x509v3/v3_pci.c
deps/src/openssl/crypto/x509v3/v3_asid.c
deps/src/openssl/crypto/x509v3/v3_akeya.c
deps/src/openssl/crypto/x509v3/v3_cpols.c
deps/src/openssl/crypto/x509v3/pcy_node.c
deps/src/openssl/crypto/x509v3/v3_bitst.c
deps/src/openssl/crypto/x509v3/v3_prn.c
deps/src/openssl/crypto/x509v3/v3_addr.c
deps/src/openssl/crypto/x509v3/pcy_lib.c
deps/src/openssl/crypto/x509v3/pcy_map.c
deps/src/openssl/crypto/x509v3/v3_conf.c
deps/src/openssl/crypto/x509v3/v3err.c
deps/src/openssl/crypto/x509v3/v3_ocsp.c
deps/src/openssl/crypto/ripemd/rmd_one.c
deps/src/openssl/crypto/ripemd/rmd_dgst.c
deps/src/openssl/engines/ccgost/gost_ameth.c
deps/src/openssl/engines/ccgost/gost_params.c
deps/src/openssl/engines/ccgost/e_gost_err.c
deps/src/openssl/engines/ccgost/gost_crypt.c
deps/src/openssl/engines/ccgost/gosthash.c
deps/src/openssl/engines/ccgost/gost_keywrap.c
deps/src/openssl/engines/ccgost/gost94_keyx.c
deps/src/openssl/engines/ccgost/gost89.c
deps/src/openssl/engines/ccgost/gost_pmeth.c
deps/src/openssl/engines/ccgost/gost_eng.c
deps/src/openssl/engines/ccgost/gost_asn1.c
deps/src/openssl/engines/ccgost/gost_md.c
deps/src/openssl/engines/ccgost/gost2001_keyx.c
deps/src/openssl/engines/ccgost/gost_sign.c
deps/src/openssl/engines/ccgost/gost_ctl.c
deps/src/openssl/engines/ccgost/gost2001.c
deps/src/openssl/engines/e_ubsec.c
deps/src/openssl/engines/e_atalla.c
deps/src/openssl/engines/e_padlock.c
deps/src/openssl/engines/e_gmp.c
deps/src/openssl/engines/e_nuron.c
deps/src/openssl/engines/e_aep.c
deps/src/openssl/engines/e_4758cca.c
deps/src/openssl/engines/e_chil.c
deps/src/openssl/engines/e_sureware.c
deps/src/openssl/engines/e_capi.c
deps/src/openssl/engines/e_cswift.c
deps/src/openssl/ssl/s3_pkt.c
deps/src/openssl/ssl/d1_meth.c
deps/src/openssl/ssl/d1_lib.c
deps/src/openssl/ssl/s23_lib.c
deps/src/openssl/ssl/s3_enc.c
deps/src/openssl/ssl/ssl_cert.c
deps/src/openssl/ssl/tls_srp.c
deps/src/openssl/ssl/ssl_lib.c
deps/src/openssl/ssl/s2_lib.c
deps/src/openssl/ssl/ssl_err.c
deps/src/openssl/ssl/t1_clnt.c
deps/src/openssl/ssl/s3_srvr.c
deps/src/openssl/ssl/t1_meth.c
deps/src/openssl/ssl/ssl_rsa.c
deps/src/openssl/ssl/d1_pkt.c
deps/src/openssl/ssl/bio_ssl.c
deps/src/openssl/ssl/ssl_algs.c
deps/src/openssl/ssl/d1_srtp.c
deps/src/openssl/ssl/s23_pkt.c
deps/src/openssl/ssl/s2_clnt.c
deps/src/openssl/ssl/ssl_sess.c
deps/src/openssl/ssl/kssl.c
deps/src/openssl/ssl/s3_meth.c
deps/src/openssl/ssl/ssl_stat.c
deps/src/openssl/ssl/t1_srvr.c
deps/src/openssl/ssl/s2_srvr.c
deps/src/openssl/ssl/s23_clnt.c
deps/src/openssl/ssl/s3_both.c
deps/src/openssl/ssl/ssl_asn1.c
deps/src/openssl/ssl/ssl_err2.c
deps/src/openssl/ssl/s3_clnt.c
deps/src/openssl/ssl/t1_reneg.c
deps/src/openssl/ssl/t1_enc.c
deps/src/openssl/ssl/d1_both.c
deps/src/openssl/ssl/d1_srvr.c
deps/src/openssl/ssl/s3_lib.c
deps/src/openssl/ssl/s23_meth.c
deps/src/openssl/ssl/s2_enc.c
deps/src/openssl/ssl/s2_pkt.c
deps/src/openssl/ssl/ssl_txt.c
deps/src/openssl/ssl/d1_clnt.c
deps/src/openssl/ssl/ssl_ciph.c
deps/src/openssl/ssl/s23_srvr.c
deps/src/openssl/ssl/t1_lib.c
deps/src/openssl/ssl/d1_enc.c
deps/src/openssl/ssl/s2_meth.c
)

add_library (apr-1 STATIC
deps/src/apr/tables/apr_hash.c
deps/src/apr/tables/apr_tables.c
deps/src/apr/network_io/unix/inet_ntop.c
deps/src/apr/network_io/unix/inet_pton.c
deps/src/apr/network_io/unix/socket_util.c
deps/src/apr/network_io/unix/sockopt.c
deps/src/apr/network_io/unix/sendrecv.c
deps/src/apr/network_io/unix/multicast.c
deps/src/apr/network_io/unix/sockaddr.c
deps/src/apr/network_io/unix/sockets.c
deps/src/apr/file_io/unix/fullrw.c
deps/src/apr/file_io/unix/filedup.c
deps/src/apr/file_io/unix/filepath.c
deps/src/apr/file_io/unix/buffer.c
deps/src/apr/file_io/unix/fileacc.c
deps/src/apr/file_io/unix/dir.c
deps/src/apr/file_io/unix/filepath_util.c
deps/src/apr/file_io/unix/flock.c
deps/src/apr/file_io/unix/copy.c
deps/src/apr/file_io/unix/seek.c
deps/src/apr/file_io/unix/mktemp.c
deps/src/apr/file_io/unix/tempdir.c
deps/src/apr/file_io/unix/pipe.c
deps/src/apr/file_io/unix/open.c
deps/src/apr/file_io/unix/filestat.c
deps/src/apr/file_io/unix/readwrite.c
deps/src/apr/mmap/unix/mmap.c
deps/src/apr/mmap/unix/common.c
deps/src/apr/user/unix/userinfo.c
deps/src/apr/user/unix/groupinfo.c
deps/src/apr/misc/unix/charset.c
deps/src/apr/misc/unix/getopt.c
deps/src/apr/misc/unix/errorcodes.c
deps/src/apr/misc/unix/otherchild.c
deps/src/apr/misc/unix/env.c
deps/src/apr/misc/unix/rand.c
deps/src/apr/misc/unix/start.c
deps/src/apr/misc/unix/version.c
deps/src/apr/shmem/unix/shm.c
deps/src/apr/dso/unix/dso.c
deps/src/apr/memory/unix/apr_pools.c
deps/src/apr/passwd/apr_getpass.c
deps/src/apr/support/unix/waitio.c
deps/src/apr/random/unix/apr_random.c
deps/src/apr/random/unix/sha2_glue.c
deps/src/apr/random/unix/sha2.c
deps/src/apr/locks/unix/thread_rwlock.c
deps/src/apr/locks/unix/proc_mutex.c
deps/src/apr/locks/unix/global_mutex.c
deps/src/apr/locks/unix/thread_cond.c
deps/src/apr/locks/unix/thread_mutex.c
deps/src/apr/atomic/unix/s390.c
deps/src/apr/atomic/unix/mutex.c
deps/src/apr/atomic/unix/builtins.c
deps/src/apr/atomic/unix/ppc.c
deps/src/apr/atomic/unix/ia32.c
deps/src/apr/atomic/unix/solaris.c
deps/src/apr/threadproc/unix/signals.c
deps/src/apr/threadproc/unix/proc.c
deps/src/apr/threadproc/unix/thread.c
deps/src/apr/threadproc/unix/threadpriv.c
deps/src/apr/threadproc/unix/procsup.c
deps/src/apr/strings/apr_snprintf.c
deps/src/apr/strings/apr_strings.c
deps/src/apr/strings/apr_strnatcmp.c
deps/src/apr/strings/apr_cpystrn.c
deps/src/apr/strings/apr_strtok.c
deps/src/apr/strings/apr_fnmatch.c
deps/src/apr/time/unix/timestr.c
deps/src/apr/time/unix/time.c
deps/src/apr/poll/unix/poll.c
deps/src/apr/poll/unix/select.c
deps/src/apr/poll/unix/pollset.c
deps/src/apr/poll/unix/port.c
deps/src/apr/poll/unix/kqueue.c
deps/src/apr/poll/unix/pollcb.c
deps/src/apr/poll/unix/epoll.c
)

#deps/src/apr/exports.c
#deps/src/apr/export_vars.c

add_library (tcnative SHARED
native/src/lock.c
native/src/info.c
native/src/os.c
native/src/address.c
native/src/poll.c
native/src/stdlib.c
native/src/jnilib.c
native/src/mmap.c
native/src/proc.c
native/src/sslinfo.c
native/src/file.c
native/src/thread.c
native/src/network.c
native/src/sslutils.c
native/src/sslnetwork.c
native/src/dir.c
native/src/shm.c
native/src/multicast.c
native/src/sslext.c
native/src/sslcontext.c
native/src/user.c
native/src/pool.c
native/src/bb.c
native/src/misc.c
native/src/ssl.c
native/src/error.c
) 

target_link_libraries(tcnative apr-1)
target_link_libraries(tcnative ssl)
